--- a/ServerProto/static_assets/style.css
+++ b/ServerProto/static_assets/style.css
@@ -4,11 +4,11 @@
   z-index: 100;
   top: 0px;
   left: 0px;
-  width: 30%;
-  height: 40%;
+  width: 23%;
+  height: 38%;
   color: #fff;
   background-color: rgba(0,0,0,0.9);
-  overflow: auto;
+  /* overflow: auto; */
   -webkit-overflow-scrolling: touch;
   opacity: 1;
   pointer-events: auto;
@@ -16,15 +16,19 @@
 }
 .content {
   box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  padding: 20px 20px 40px;
+  height: 100%;
+  /* padding: 10px 10px 10px; */
 }
 .close {
   width: 50px;
   height: 50px;
   margin-left: auto;
-  margin-top: -15px;
-  margin-right: -15px;
+  /* margin-top: -15px; */
+  /* margin-right: -15px; */
   background: url('x.png') center center no-repeat;
   background-size: 30px;
   cursor: pointer;
@@ -33,4 +37,41 @@
 }
 .close:hover {
   opacity: 1;
+}
+
+.input-form{
+  list-style-type: none;
+}
+
+.form-item {
+  padding-bottom: 5px;
+  width: 250px;
+  /* border: 2px solid; */
+}
+.form-textbox {
+  background-color: #ededed;
+  border: 2px solid;
+  border-color: #b3d1d1;
+  width: 100%;
+}
+.form-textarea{
+  background-color: #ededed;
+  border: 2px solid;
+  border-color: #b3d1d1;
+  width: 100%;
+  height: 100px;
+}
+
+.form-submit {
+  border-radius: 2px;
+  font-size: 12px;
+  padding: 7px 30px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #4286f4;
+}
+
+.form-submit:hover {
+  color: #c1cfff;
+  border: 1px solid #356bc4;
 }
