--- a/ServerProto/static_assets/style.css
+++ b/ServerProto/static_assets/style.css
@@ -4,10 +4,10 @@
   z-index: 100;
   top: 0px;
   left: 0px;
-  width: 23%;
-  height: 38%;
+  width: 20%;
+  height: 100%;
   color: #fff;
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(55,55,55,0.9);
   /* overflow: auto; */
   -webkit-overflow-scrolling: touch;
   opacity: 1;
@@ -15,13 +15,9 @@
   user-select: none;
 }
 .content {
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  /* padding: 10px 10px 10px; */
+  /* box-sizing: border-box; */
+  margin: 0;
+  padding: 0;
 }
 .close {
   width: 50px;
@@ -41,6 +37,9 @@
 
 .input-form{
   list-style-type: none;
+  padding-left: 20px;
+  padding-top: 0;
+  font-size: 15;
 }
 
 .form-item {
@@ -60,6 +59,7 @@
   border-color: #b3d1d1;
   width: 100%;
   height: 100px;
+  resize: none;
 }
 
 .form-submit {
@@ -74,4 +74,28 @@
 .form-submit:hover {
   color: #c1cfff;
   border: 1px solid #356bc4;
+}
+
+
+.select-container {
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 1000;
+  top: 0px;
+  left: 50%;
+  width: 250px;
+  height: 100px;
+  color: #fff;
+  background-color: rgba(55,55,55,0.9);
+  /* overflow: auto; */
+  -webkit-overflow-scrolling: touch;
+  opacity: 1;
+  pointer-events: auto;
+  user-select: none;
+}
+.select-content {
+  /* box-sizing: border-box; */
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
