--- a/ServerProto/static_assets/style.css
+++ b/ServerProto/static_assets/style.css
@@ -19,7 +19,7 @@
   margin: 0;
   padding: 0;
 }
-.close {
+.close1 {
   width: 50px;
   height: 50px;
   margin-left: auto;
@@ -31,9 +31,11 @@
   opacity: 0.4;
   transition: opacity 0.2s;
 }
-.close:hover {
+.close1:hover {
   opacity: 1;
 }
+
+
 
 .input-form{
   list-style-type: none;
@@ -61,7 +63,6 @@
   height: 100px;
   resize: none;
 }
-
 .form-submit {
   border-radius: 2px;
   font-size: 12px;
@@ -82,8 +83,8 @@
   position: fixed;
   z-index: 1000;
   top: 0px;
-  left: 50%;
-  width: 550px;
+  left: 30%;
+  width: 600px;
   height: 40px;
   color: #fff;
   background-color: rgba(55,55,55,0.9);
@@ -101,6 +102,24 @@
   width: 100%;
   table-layout: fixed;
   border-spacing: 10px;
+}
+.close2 {
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  margin: 0;
+  display: table-cell;
+  /* margin-left: auto; */
+  /* margin-top: -15px; */
+  /* margin-right: -15px; */
+  background: url('collapse_arrow.png') center center no-repeat;
+  background-size: 30px;
+  cursor: pointer;
+  opacity: 0.6;
+  transition: opacity 0.2s;
+}
+.close2:hover {
+  opacity: 1;
 }
 .selCol {
   display: table-cell;
