--- a/ServerProto/static_assets/style.css
+++ b/ServerProto/static_assets/style.css
@@ -35,7 +35,18 @@
   opacity: 1;
 }
 
-
+.gNotes{
+  position: absolute;
+  bottom: 10px;
+}
+.gNotes-textarea{
+  background-color: #ededed;
+  border: 2px solid;
+  border-color: #b3d1d1;
+  width: 100%;
+  height: 200px;
+  resize: none;
+}
 
 .input-form{
   list-style-type: none;
@@ -74,7 +85,7 @@
 
 .form-submit:hover {
   color: #c1cfff;
-  border: 1px solid #356bc4;
+  border: 2px solid #356bc4;
 }
 
 
@@ -94,7 +105,7 @@
 .select-content {
   display: table;
   width: 100%;
-  border-spacing: 10px;
+  border-spacing: 7.5px;
 }
 .close2 {
   width: 30px;
@@ -112,4 +123,9 @@
   display: table-cell;
   text-align: center;
   font-size: 14;
+}
+.check{
+  width: 15px;
+  height: 15px;
+  padding-left: 5px;
 }
