--- a/motherload/client/production.ejs
+++ b/motherload/client/production.ejs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>ReactVR: Tour Sample</title>
+    <title>Serverful</title>
     <style>body { margin: 0; }</style>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="../static_assets/style.css" type="text/css" />
