--- a/motherload/client/index.ejs
+++ b/motherload/client/index.ejs
@@ -1,14 +1,6 @@
 ﻿<!DOCTYPE html>
-<!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js"> <!--<![endif]-->
+<html class="no-js">
 <head>
-
     <!-- Meta-Information -->
     <title>IPPD Serverful</title>
     <meta charset="utf-8">
@@ -21,20 +13,15 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Our Website CSS Styles -->
+    <!-- CSS Styles -->
     <link rel="stylesheet" href="css/main.css">
-
 </head>
 <body ng-app="tutorialWebApp">
-<!--[if lt IE 7]>
-<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-    your browser</a> to improve your experience.</p>
-<![endif]-->
-
-<!-- Our Website Content Goes Here -->
-<div ng-include='"templates/header.html"'></div>
+    
+<!-- Main Content -->
+<div> <% include templates/header.ejs %> </div>
 <div ng-view></div>
-<div ng-include='"templates/footer.html"'></div>
+<div> <% include templates/footer.ejs %> </div>
 
 <!-- Vendor: Javascripts -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -45,7 +32,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
 
 <!-- Our Website Javascripts -->
-<script src="js/main.js"></script>
+<script src="./js/main.js"></script>
 
 </body>
 </html>
