--- a/motherload/client/partials/VRStart.html
+++ b/motherload/client/partials/VRStart.html
@@ -1,7 +1,5 @@
 <div class="container">
-
     <div class="row">
-
         <div class="col-lg-12">
             <h1 class="page-header">
                 VR Page Selection
@@ -13,47 +11,38 @@
                 </li>
             </ol>
         </div>
-
     </div>
-
+    
     <!--New row for drop down selection form-->
     <div class="row">
         <!--Form for building/floor/room-->
         <div ng-app="tutorialWebApp" ng-controller="formCtrl">
             <form novalidate>
-                <!--Change to dynamic forms that rerfence information stored, created in LocationCreation-->
-                Building:<br>
+                <!-- do the map/search here ~ -->
+
+                <!-- Change to dynamic forms that rerfence information stored, created in LocationCreation-->
+                Building: <br>
                 <select ng-model="building">
-                    <option value="">
-                    <option value="dogs">Dogs
+                    <!-- <option value=""></option> -->
+                    <option value="dogs">Dogs</option>
                 </select>
-                <br>
-
-                Floor:<br>
+                <br> Floor: <br>
                 <select ng-model="floor">
-                    <option value="">
-                    <option value="dogs">Dogs
+                    <!-- <option value=""></option> -->
+                    <option value="dogs">Dogs</option>
                 </select>
-                <br>
-
-                Room:<br>
+                <br> Room: <br>
                 <select ng-model="room">
-                    <option value="this.room">List rooms
-                    <option value="dogs">Dogs
+                    <!-- <option value="this.room">List rooms</option> -->
+                    <option value="dogs">Dogs</option>
                 </select>
-                <br><br>
-
+                <br> <br>
                 <button ng-click="submit()">SUBMIT NOT IMPLEMENTED</button>
             </form>
         </div>
     </div>
-    <!-- /.row-->
-
     <!--Go button redirect to desired destination-->
     <div>
         <a href="#VRView">Theoretical Go button</a>
     </div>
-
- </div>
-<!-- /.container -->
-
+</div>
