--- a/motherload/client/partials/home.html
+++ b/motherload/client/partials/home.html
@@ -1,4 +1,3 @@
-
 <div id="myCarousel" class="carousel slide">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -6,7 +5,6 @@
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
     </ol>
-
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
         <div class="item active">
@@ -28,7 +26,6 @@
             </div>
         </div>
     </div>
-
     <!-- Controls -->
     <a class="left carousel-control" href="#myCarousel" data-slide="prev">
         <span class="icon-prev"></span>
@@ -37,12 +34,9 @@
         <span class="icon-next"></span>
     </a>
 </div>
-
 <div class="section">
     <div class="container">
-
         <div class="row">
-
             <ul>
                 <li>
                     <a href="#/ImageUpload">Upload Images</a>
@@ -53,17 +47,11 @@
             </ul>
         </div>
     </div>
-
-            <div class="container">
-
-                <div class="row">
-                    <div class="col-lg-4 col-md-4">
-                        <p>Blah blah project documentation </p>
-                    </div>
-                    <!-- /.row -->
-
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-4">
+                <p>[Nicer Inferface?]</p>
             </div>
-            <!-- /.container -->
-
- </div>
- <!-- /.section -->
+        </div>
+    </div>
+</div>
