--- a/motherload/client/templates/footer.ejs
+++ b/motherload/client/templates/footer.ejs
@@ -1,5 +1,8 @@
 <footer>
     <div class="container">
-        <p><a href="https://github.com/Marcial1234/ippd/tree/master">Github</a></p>
+    	<!-- 
+        <p><a href="https://github.com/Marcial1234/ippd/tree/master" target="_blank">Github</a></p>
+    	 -->
+    	 <p> A beatiful footer! </p>
     </div>
 </footer>
