--- a/motherload/client/templates/header.ejs
+++ b/motherload/client/templates/header.ejs
@@ -7,15 +7,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">IPPD</a>
+            <a class="navbar-brand" href="/">IPPD</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/ImageUpload">Image Upload</a>
-                </li>
-                <li><a href="#/VRStart">View VR</a>
-                </li>
+                <li> <a href="ImageUpload">Image Upload</a> </li>
+                <li> <a href="VRStart">View VR</a> </li>
             </ul>
         </div>
     </div>
