--- a/motherload/client/partials/LocationCreation.html
+++ b/motherload/client/partials/LocationCreation.html
@@ -11,7 +11,7 @@
         <div class="col-lg-12">
             <!--Need to store this-->
             <!--Form for building/floor/room-->
-            <div ng-app="tutorialWebApp" ng-controller="formCtrl">
+            <div ng-app="app" ng-controller="FormCtrl">
                 <form novalidate>
                     Building: <br>
                     <input type="text" ng-model="building">
