--- a/motherload/client/templates/footer.ejs
+++ b/motherload/client/templates/footer.ejs
@@ -3,6 +3,6 @@
     	<!-- 
         <p><a href="https://github.com/Marcial1234/ippd/tree/master" target="_blank">Github</a></p>
     	 -->
-    	 <p> A beatiful footer! </p>
+    	 <p> Verizon & Serverful © 2018 </p>
     </div>
 </footer>
