--- a/motherload/client/index.ejs
+++ b/motherload/client/index.ejs
@@ -1,42 +1,45 @@
 ﻿<!DOCTYPE html>
-<html class="no-js">
+<html>
+
 <head>
-    <!-- Meta-Information -->
-    <title>IPPD - Verizon - Serverful</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="ACME Inc.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Vendor: Bootstrap Stylesheets http://getbootstrap.com -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- CSS Styles -->
-    <link rel="stylesheet" href="css/main.css">
+  <!-- Meta-Information -->
+  <title>IPPD - Verizon - Serverful</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="description" content="ACME Inc.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Vendor: Bootstrap Stylesheets http://getbootstrap.com -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- CSS Styles -->
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body ng-app="app">
+    
+  <!-- Main Content -->
+  <div>
+    <% include templates/header.ejs %>
+  </div>
+  <div ng-view></div>
+  <div>
+    <% include templates/footer.ejs %>
+  </div>
 
-<!-- Main Content -->
-<div> <% include templates/header.ejs %> </div>
-<div ng-view></div>
-<div> <% include templates/footer.ejs %> </div>
+  <!-- Vendor: Javascripts -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<!-- Vendor: Javascripts -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<!-- Vendor: Angular, followed by our custom Javascripts -->
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.min.js"></script>
-
-<!-- Our Website Javascripts -->
-<!-- needs to have [path] variable.. -->
-<script src="./js/entry.js"></script>
-<script src="./js/page.controller.js"></script>
-<script src="./js/form.controller.js"></script>
-<script src="./js/client.routes.js"></script>
-
+  <!-- Vendor: Angular, followed by our custom Javascripts -->
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.min.js"></script>
+  
+  <!-- Our Website Javascripts -->
+  <!-- needs to have [path] variable.. -->
+  <script src="./js/entry.js"></script>
+  <script src="./js/page.controller.js"></script>
+  <script src="./js/form.controller.js"></script>
+  <script src="./js/client.routes.js"></script>
 </body>
+
 </html>
