--- a/motherload/client/partials/404.html
+++ b/motherload/client/partials/404.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row centered">
     <div class="col-lg-12">
       <!-- <h1 class="page-header"> 404 <small>Page Not Found</small> </h1> -->
       <ol class="breadcrumb">
