--- a/motherload/client/templates/nav.html
+++ b/motherload/client/templates/nav.html
@@ -12,8 +12,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li> <a href="ImageUpload">Image Upload</a> </li>
-                <li> <a href="VRStart">View VR</a> </li>
+                <!-- <li> <a href="VRStart"> National Asset View </a> </li> -->
+                <li> <a href="/"> Central Offices </a> </li>
+                <li> <a href="us">About Us</a> </li>
             </ul>
         </div>
     </div>
