--- a/motherload/client/partials/404.html
+++ b/motherload/client/partials/404.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row centered">
-    <div class="col-lg-12">
+  <div class="row">
+    <div>
       <!-- <h1 class="page-header"> 404 <small>Page Not Found</small> </h1> -->
       <ol class="breadcrumb">
         <li><a href="../">Home</a>
@@ -9,7 +9,7 @@
       </ol>
     </div>
   </div>
-  <div class="row">
+  <div class="row centered">
     <div class="col-lg-12" ng-app="app" ng-controller="FormCtrl">
       <p class="error-404">404</p>
       <p class="lead">The page you're looking for could not be found</p>
