--- a/motherload/client/partials/FloorMap.html
+++ b/motherload/client/partials/FloorMap.html
@@ -7,29 +7,100 @@
   </div>
   <div class="row">
     <div class="col-lg-12" ng-app="app" ng-controller="PageCtrl">
-      <h1 class="page-header"> Create Contiguous Floor Map  </h1>
+      <h1 class="page-header"> 
+        Create Contiguous Floor Map 
+<!-- keep this element with this indentation -->
+        <em class="fa fa-info-circle" 
+title="Make different floors 
+for non-contiguous
+sections">
+      </em>
+      <a href="/upload"><button class="btn btn-warning">
+        <i class="fab fa-2x fa-phoenix-framework"></i>
+      </button></a>
+      </h1>
 
-      <!-- add inputs for x and y size ~ -->
-
-      <div ng-repeat="x in meh"
-           style="display: flex; justify-content: center;">
-
-        <div ng-repeat="x in meh[$index] track by $index"
-        >
-          <!-- type="number" min="0" step="1" -->
-          <!-- custom filter... check old code ~ -->
-          <!-- | notTaken" -->
-          <select ng-model="meh[$parent.$index][$index]"
-                  ng-options="x for x in picsOptions"
-          >
-            <option value="" disabled>Choose picture</option>
-          </select>
+      <!-- instructions ~ -->
+      <!-- fill this out -->
+      
+      <!-- dimensions table -->
+      <!-- 
+      <div class="centered" style="margin: 20px 20px;">
+        <div class="table-centered">
+          <div>Table dimensions (row, columns)</div>
+          <div>&nbsp;</div>
+          <input ng-model="y" ng-change="table = createMatrix(x, y)"
+                 type="number" step="1" placeholder="Number of rows">
+          <div>&nbsp;</div>
+          <input ng-model="x" ng-change="table = createMatrix(x, y)"
+                 type="number" step="1" placeholder="Number of columns">
+        </div>
+        <div>
+          <b>WARNING:</b> changing these won't preserve data.
+          Attempt to have the best layout possible before starting
         </div>
       </div>
 
-      <br> <br>
-      {{meh}}
+      <div ng-hide="(x > 0 && y > 0)" class="centered">
+        PEASE ENTER NUMBERS GREATER THAN ZERO!
+        <br> Rows {{y}} , Columns {{x}}
+      </div>
+      -->
+      
+      <br>
 
+      <!-- map construction area -->
+      <!-- <div ng-show="(x > 0 && y > 0)"> -->
+      <div>
+        <div class="table-centered">
+          <div> Start Room Number: </div>
+          &nbsp;
+          <select ng-model="startRoom" ng-options="x for x in picsOptions">
+            <option value="" disabled> Choose </option>
+          </select>
+        </div>
+        <br>
+        <div ng-repeat="x in table" class="row table-centered">
+          <!-- panoramic menu with preview?  -->
+
+          <div ng-repeat="x in table[$index] track by $index">
+
+            <!-- conditional formatting of bold if start room? -->
+            
+            <!-- only allow for unique selection. One number, one time -->
+            <select ng-model="table[$parent.$index][$index]"
+                    ng-options="x for x in filteredOptions = (picsOptions | notTakenInTable:this:$parent.$index:$index)"
+                    class="dropdown"
+            >
+                    <!-- ng-options="x for x in filteredOptions = (picsOptions | notTakenInTable:table:table[$parent.$index][$index])" -->
+              <option value="" ng-if="filteredOptions.length > 0"> Picture: </option>
+            </select>
+          </div>
+        </div>
+      </div>
+      
+      <br> <br>
+
+      <!-- shifting buttons -->
+      <div class="centered">
+        <p>Shift Map <em class="fa fa-info-circle" title="Data WILL be preserved"></em></p>
+        <button class="btn btn-info" ng-click="shiftUp()">Up</button>
+        <button class="btn btn-info" ng-click="shiftDown()">Down</button>
+        <button class="btn btn-info" ng-click="shiftRight()">Right</button>
+        <button class="btn btn-info" ng-click="shiftLeft()">Left</button>
+      </div>
+
+      <br> <br>
+      {{table}}
+      <br> <br>
+
+      <div class="right">
+        <button ng-click="buildFloor()" class="btn btn-success">
+          Create Virtual Floor
+        </button>
+      </div>
+
+      <div ng-if="vid">{{vid}}</div>
     </div>
   </div>
 </div>
