--- a/motherload/client/partials/home.html
+++ b/motherload/client/partials/home.html
@@ -6,11 +6,45 @@
   </div>
   <div class="row">
     <div class="col-lg-12" ng-app="app" ng-controller="FormCtrl">
-      <h3 class="centered">Choose from the following</h3>
+      <h1 class="page-header centered"> 
+        Central Offices List 
+        <a href="/FloorMap"><button class="btn btn-danger">Dale</button></a>
+      </h1>
+  
+      <!-- add a search bar ~ -->
+  
+      <!-- table sliding content -->
+      <div id="mainTable">
+        <table class="table table-striped table-hover">
+          <thead>
+            <th>State, City</th>
+            <th>Building Name</th>
+            <th> &nbsp; </th>
+            <th> &nbsp; </th>
+          </thead>
+
+          <tr ng-repeat=" bldg in allBuildings | orderBy:'long_state' | filter:search ">
+            <td>{{bldg.long_state}}, {{bldg.city}}</td>
+            <td>{{bldg.name}}</td>
+            <td> Edit floor </td>
+            <td> + Floor </td>
+          </tr>
+
+        </table>
+      </div>
+
+      <br>
+
+      <div class="right">
+        <a href="/newBuilding">
+          <button class="btn btn-primary"> New Building </button>
+        </a>
+      </div>
+
       <!-- turn into buttons ~ side by side -->
-      <div style="display: flex; justify-content: center;">
+      <!-- 
+      <div class="table-centered">
         <a href="/FloorMap">
-          <!-- <a href="/ImageUploadStart"> -->
           <p class="btn btn-warning">
             Upload Images
           </p>
@@ -22,6 +56,8 @@
           </p>
         </a>
       </div>
+       -->
+
     </div>
   </div>
 </div>
