--- a/motherload/client/css/main.css
+++ b/motherload/client/css/main.css
@@ -50,6 +50,15 @@ table.table {
     margin-bottom: 0px;
 }
 
+.drop-box {
+    background: #F8F8F8;
+    border: 5px dashed #DDD;
+    width: 170px;
+    text-align: center;
+    padding: 50px 10px;
+    margin-left: 10px;
+}
+
 /* no body overflow and consisten look on laptop */
 /*
 #app {
