--- a/motherload/raw-reactvr/static_assets/style.css
+++ b/motherload/raw-reactvr/static_assets/style.css
@@ -129,3 +129,49 @@
   height: 15px;
   padding-left: 5px;
 }
+
+.confirm-container{
+  /* box-sizing: border-box; */
+  position: fixed;
+  z-index: 10;
+  top: 40%;
+  width: 100%;
+  height: 80px;
+  color: #fff;
+  background-color: rgba(55,55,55,0.9);
+  /* -webkit-overflow-scrolling: touch; */
+  user-select: none;
+}
+
+.confirm-yes{
+  position: fixed;
+  border-radius: 2px;
+  font-size: 12px;
+  margin-top: 5px;
+  padding: 7px 30px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #28af2a;
+  left: 44%;
+}
+
+.confirm-no{
+  position: fixed;
+  border-radius: 2px;
+  font-size: 12px;
+  margin-top: 5px;
+  padding: 7px 30px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #af3c27;
+  left: 51%;
+}
+
+.confirm-main {
+  text-align: center;
+  font-size: 16;
+}
+.confirm-message {
+  text-align: center;
+  font-size: 12;
+}
