--- a/motherload/client/partials/us.html
+++ b/motherload/client/partials/us.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div>
       <ol class="breadcrumb">
-        <li> <a href="../">Home</a> </li>
+        <li> <a href="/">Home</a> </li>
         <li class="active"> About us </li>
       </ol>
     </div>
@@ -17,6 +17,7 @@
         <img src="./static_assets/no_comment.png">
       </div>
       <br>
+      <!-- Spiel ~ -->
       <p style="font-size: 20px">
 
 In order to maintain their <b>renowned</b> 99.9% reliability and quality coverage across the nation, <img src="./static_assets/v_logo.svg" id="logo"> employs the use of numerous central offices. The offices have a management cost for not only the buildings, but also the assets insides. Currently, asset tracking and management at <img src="./static_assets/v_logo.svg" id="logo"> is a purely text-based system. Serverful’s objective is to add context to this current system by introducing 360-degree images that will allow for visual verification and improved written communication. Our system will allow <img src="./static_assets/v_logo.svg" id="logo"> to remotely access and view the current state of their central offices and allows for updates periodically or on demand. In its completion, this project should help optimize asset tracking and management at <img src="./static_assets/v_logo.svg" id="logo"> by cutting the amount of time required and give employees remote access to the current state of the central offices.
