--- a/motherload/client/partials/404.html
+++ b/motherload/client/partials/404.html
@@ -3,7 +3,7 @@
     <div>
       <!-- <h1 class="page-header"> 404 <small>Page Not Found</small> </h1> -->
       <ol class="breadcrumb">
-        <li><a href="../">Home</a>
+        <li><a href="/">Home</a>
         </li>
         <li class="active">404</li>
       </ol>
