--- a/motherload/client/partials/newBuilding.html
+++ b/motherload/client/partials/newBuilding.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div>
       <ol class="breadcrumb">
-        <li> <a href="../">Home</a> </li>
+        <li> <a href="/">Home</a> </li>
         <li class="active"> New Building </li>
       </ol>
     </div>
