--- a/motherload/client/partials/searchNotes.html
+++ b/motherload/client/partials/searchNotes.html
@@ -16,33 +16,50 @@
       <br> <br>
 
       <ul class="nav nav-tabs table-centered">
-        <li role="presentation" data-toggle="tab" class="active"><a href="#buildings">Building List</a></li>
-        <li role="presentation" data-toggle="tab"><a href="/searchNotes">Note search</a></li>
+        <li role="presentation" data-toggle="tab" ><a href="/"> Building List </a></li>
+        <li role="presentation" data-toggle="tab" class="active"> <a> Note search </a> </li>
       </ul>
 
       <!-- table sliding content -->
       <div id="mainTable">
-        <div class="tab-pane active" id="buildings">
-
+        <div class="tab-pane">
           <table class="table table-striped table-hover">
             <thead>
-              <th class="third"> State, City</th>
-              <th class="third centered">Building Name</th>
-              <th class="third"> &nbsp; </th>
+              <th class="fifth"> Note </th>
+              <th class="fifth"> Building </th>
+              <th class="fifth"> Floor </th>
+              <th class="fifth"> Room </th>
+              <th class="fifth"> Navigate </th>
             </thead>
 
+            <!-- modify this ofc... -->
             <tr ng-repeat=" bldg in allBuildings | orderBy:'long_state' | filter:search ">
-              <td>{{bldg.long_state}}, {{bldg.city}}</td>
-              <td class="centered">{{bldg.name}}</td>
-              <td class="right">
-                <a ng-click="setBldg(bldg._id)" href="/viewFloors" class="btn btn-link padding-less"> View Floors </a> 
+
+              <td> [note here soon] </td>
+              <td> {{bldg.name}} </td>
+
+              <td> 
+                <a ng-click="setBldg(bldg._id)" class="btn btn-link padding-less"> [floor name here soon] </a> 
+                <!-- 
                 <a ng-click="delBldg(bldg._id, bldg.name)" 
                    class="btn btn-danger padding-less">
                    <em class="fas fa-trash-alt"></em>
-                 </a>
+                </a>
+                 -->
               </td>
+              
+              <td> {{bldg.name}} </td>
+              <!-- to modify later -->
+
+              <td class="centered"> 
+                <a href="/vr?bldg={{bldg._id}}&floor=0&room=0" title="Navigate to this room in VR" target="_blank">
+                  <em class="fas fa-external-link-alt"></em>
+                </a>
+              </td>
+
             </tr>
           </table>
+        </div>
         </div>
 
       </div>
@@ -50,8 +67,7 @@
       <br>
 
       <div class="right">
-        <!--  href="/newBuilding"  -->
-        <a ng-click="tba()">
+        <a href="/newBuilding">
           <button class="btn btn-primary"> New Building </button>
         </a>
       </div>
