--- a/motherload/client/templates/footer.html
+++ b/motherload/client/templates/footer.html
@@ -31,5 +31,6 @@
 
 <script src="./angular/map.controller.js"></script>
 <script src="./angular/form.controller.js"></script>
+<script src="./angular/floors.controller.js"></script>
 <script src="./angular/global.controller.js"></script>
 <script src="./angular/file.upload.directive.js"></script>
