--- a/motherload/client/css/main.css
+++ b/motherload/client/css/main.css
@@ -24,6 +24,11 @@ For more info and more free Bootstrap 3 HTML themes, visit http://startbootstrap
     justify-content: center;
 }
 
+.table-left {
+    display: flex;
+    justify-content: left;
+}
+
 .dropdown {
     width: 70px;
     cursor: pointer;
