--- a/motherload/client/partials/home.html
+++ b/motherload/client/partials/home.html
@@ -11,14 +11,17 @@
       </h1>
       
       <!-- add a search bar ~ -->
-      <input type="text" ng-model="$root.search" placeholder="Search anything (builings by state, notes)"
+      <input type="text" ng-model="$root.search" placeholder="Search for builings by state, name, etc"
              class="form-control" style="width: 100%">
+             <!-- anything, blds by state, notes ~ for LATER -->
       <br> <br>
 
+      <!-- 
       <ul class="nav nav-tabs table-centered">
         <li role="presentation" data-toggle="tab" class="active"><a href="#buildings">Building List</a></li>
         <li role="presentation" data-toggle="tab"><a href="/searchNotes">Note search</a></li>
       </ul>
+       -->
 
       <!-- table sliding content -->
       <div id="mainTable">
@@ -35,7 +38,7 @@
               <td>{{bldg.long_state}}, {{bldg.city}}</td>
               <td class="centered">{{bldg.name}}</td>
               <td class="right">
-                <a ng-click="setBldg(bldg._id)" href="/viewFloors" class="btn btn-link padding-less"> View Floors </a> 
+                <a ng-click="setBldg(bldg._id, bldg.floors)" href="/viewFloors" class="btn btn-link padding-less"> View Floors </a> 
                 <a ng-click="delBldg(bldg._id, bldg.name)" 
                    class="btn btn-danger padding-less">
                    <em class="fas fa-trash-alt"></em>
@@ -50,8 +53,10 @@
       <br>
 
       <div class="right">
-        <!--  href="/newBuilding"  -->
-        <a ng-click="tba()">
+        <!-- ng-click="tba()" -->
+        <a 
+           href="/newBuilding" 
+        >
           <button class="btn btn-primary"> New Building </button>
         </a>
       </div>
