--- a/motherload/client/partials/viewFloors.html
+++ b/motherload/client/partials/viewFloors.html
@@ -8,7 +8,7 @@
   <div class="row">
     <!-- parse parameters, just in case ~ -->
     <!-- steal f(x) from react ~ parse if not found ~ else return "/" -->
-    <div class="col-lg-12" ng-app="app" ng-controller="FormCtrl">
+    <div class="col-lg-12" ng-app="app" ng-controller="FloorsCtrl">
       <h1 class="page-header centered"> View or Edit Floors </h1>
       <!-- add building specific info -->
       <!-- add map -->
@@ -36,7 +36,8 @@
               <th class="twoha"> &nbsp; </th>
             </thead>
 
-            <tr ng-repeat=" floor in dummyFloors | orderBy:'name' ">
+            <!-- <tr ng-repeat=" floor in $root.bldgFloors | orderBy:'name' "> -->
+            <tr ng-repeat=" floor in bldgFloors | orderBy:'name' ">
               <td>{{floor.name}}</td>
 
               <td class="centered">
@@ -46,7 +47,8 @@
               </td>
 
               <td class="right"> 
-                <a href="/vr?bldg={{currentBldg}}&floor={{$index}}&room=0"
+                <!-- &room=0 -->
+                <a href="/vr?bldg={{currentBldgId}}&floor={{$index}}"
                    title="Navigate to this room in VR" target="_blank">
                 <em class="fas fa-external-link-alt" style="color: black"></em></a>
                 &nbsp;
