--- a/motherload/client/partials/viewFloors.html
+++ b/motherload/client/partials/viewFloors.html
@@ -8,8 +8,8 @@
   <div class="row">
     <!-- parse parameters, just in case ~ -->
     <!-- steal f(x) from react ~ parse if not found ~ else return "/" -->
-    <div class="col-lg-12" ng-app="app" ng-controller="FormCtrl">
-      <h1 class="page-header centered"> View or Edit Floors </h1>
+    <div class="col-lg-12" ng-app="app" ng-controller="FloorsCtrl">
+      <h1 class="page-header centered"> View <!-- or Edit --> Floors </h1>
       <!-- add building specific info -->
       <!-- add map -->
 
@@ -32,30 +32,36 @@
           <table class="table table-striped table-hover">
             <thead>
               <th class="twoha"> Name </th>
-              <th class="twoha centered"> Edit </th>
-              <th class="twoha"> &nbsp; </th>
+              <th class="twoha centered"> <!-- Edit --> </th>
+              <th class="twoha right"> Navigate </th>
             </thead>
 
-            <tr ng-repeat=" floor in dummyFloors | orderBy:'name' ">
+            <!-- <tr ng-repeat=" floor in $root.bldgFloors | orderBy:'name' "> -->
+            <tr ng-repeat=" floor in bldgFloors | orderBy:'name' ">
               <td>{{floor.name}}</td>
 
               <td class="centered">
+                <!-- 
                 <a ng-click="tba()" class="btn btn-success padding-less">
                   <em class="far fa-edit"></em> Edit Floor Layout
                 </a> 
+                 -->
               </td>
 
-              <td class="right"> 
-                <a href="/vr?bldg={{currentBldg}}&floor={{$index}}&room=0"
+              <td class="right">
+                <!-- &room=0 -->
+                <a href="/vr?bldg={{currentBldgId}}&floor={{$index}}&room=0"
                    title="Navigate to this room in VR" target="_blank">
                 <em class="fas fa-external-link-alt" style="color: black"></em></a>
                 &nbsp;
                 &nbsp;
                 &nbsp;
-                <a ng-click="delFloor(floor._id, floor.name)" 
+                <!-- 
+                <button ng-click="delFloor(floor.hash, floor.name)" 
                    class="btn btn-danger padding-less">
                    <em class="fas fa-trash-alt"></em>
-                 </a>
+                 </button>
+                 -->
               </td>
             </tr>
 
